--- a/Views/SportsStats/Index.cshtml
+++ b/Views/SportsStats/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MvcMovie.Models.SportsStats>
+﻿@model IEnumerable<SportsData.Models.SportsStats>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
