--- a/Views/Teams/Index.cshtml
+++ b/Views/Teams/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MvcMovie.Models.Teams>
+﻿@model IEnumerable<SportsData.Models.Teams>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
