--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using MvcMovie
-@using MvcMovie.Models
+﻿@using SportsData
+@using SportsData.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
