--- a/Views/SportsData/Index.cshtml
+++ b/Views/SportsData/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MvcMovie.Models.Movie>
+﻿@model IEnumerable<SportsData.Models.Movie>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
