--- a/Views/Sports_History/Index.cshtml
+++ b/Views/Sports_History/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MvcMovie.Models.Sports_History>
+﻿@model IEnumerable<SportsData.Models.Sports_History>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Sports History Page";
